src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_37.deca
{
    int a = - "bonjour";
}
// raison : operation partielle type_unary_op
// message : Unary operation '-' cannot have operand of type 'string'